# Fridge-Dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  config.py  config.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  repository.yaml
.github/workflows/: build-image.yaml
context/planning/: fridge-dashboard-design.md
context/styling/: formatting.md
dashboard/: view.py
fridge_dashboard/: CHANGELOG.md  DOCS.md  config.yaml
homeassistant/: client.py
static/css/: styles.css
static/js/: clock.js
templates/: _head.html  dashboard.html  offline.html
tests/: test_app.py  test_client.py  test_config.py  test_view.py
utils/: logger.py
