[project]
name = "fridge-dashboard"
version = "1.2.2"
description = "Home Assistant fridge dashboard for old devices, rendered server-side by Flask."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "gunicorn>=21.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
